--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -35,8 +35,11 @@ log4j.logger.breeze.optimize=FATAL
 # BLAS & LAPACK
 log4j.logger.com.github.fommil.netlib=ERROR
 
+# Avro
+log4j.logger.org.apache.avro.mapreduce.AvroKeyInputFormat=ERROR
+
 # TransmogrifAI logging
-log4j.logger.com.salesforce.op=INFO
+log4j.logger.com.salesforce.op=ERROR
 log4j.logger.com.salesforce.op.utils.spark.OpSparkListener=OFF
 
 # Helloworld logging
